# cpplib

./: README.md
graphic/: CMakeLists.txt  tips.txt
graphic/src/: main.cpp
graphic/src/renderA/: CMakeLists.txt  render-test01.cpp  render-test02.cpp  render-test03.cpp  render-test04.cpp  render-test05.cpp
graphic/src/renderA/math/: arithmetic.hpp  matrix_include.h
graphic/src/renderA/math/matrix/: matrix.hpp  matrix_spec.hpp  operation.hpp  operation_trait.hpp  storage.hpp  trait.hpp
graphic/src/renderA/render/: gi.cpp  gi.h  render_include.h  render_matrix.hpp  transform.cpp  transform.h  transform_key.h
graphic/src/renderA/render/impl/: giimp.h
graphic/src/renderA/render/impl/SDL/: sdl_imp.cpp  sdl_imp.h  sdl_init.h
graphic/src/type/: CMakeLists.txt  Makefile  cmake_install.cmake  constant.h  constant_eval.cpp  primitive.h  traits.hpp
graphic/src/util/: memory.hpp
struct_alg/: CMakeLists.txt  note.txt  task.txt
struct_alg/src/bin_repr/: CMakeLists.txt  arithm.c  binrepr.c  include.h  program.c
struct_alg/src/lib/: common.h
struct_alg/src/sort/bubble/: CMakeLists.txt  header.h  program.cpp
struct_alg/src/sort/insert/: CMakeLists.txt  header.h  program.cpp
struct_alg/src/sort/merge/: CMakeLists.txt  header.h  program.cpp
struct_alg/src/sort/quick/: CMakeLists.txt  header.h  program.cpp
struct_alg/src/sort/select/: CMakeLists.txt  header.h  program.cpp
struct_alg/src/sort/shell/: CMakeLists.txt  header.h  program.cpp
